src/objects/Under_Consideration__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Original_Idea__r.Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <formula>Original_Idea__r.NumComments</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>CreatedBy.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Idea_URL__c</fullName>
        <label>Idea URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Original_Idea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Idea</label>
        <referenceTo>Idea</referenceTo>
        <relationshipLabel>Under Consideration</relationshipLabel>
        <relationshipName>R00N30000002VDQlEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <formula>CreatedBy.FirstName &amp; &apos; &apos; &amp;CreatedBy.LastName</formula>
        <label>Submitted By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Idea__c</fullName>
        <label>Type of Idea</label>
        <picklist>
            <picklistValues>
                <fullName>Incremental Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakthrough Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View_Idea__c</fullName>
        <formula>HYPERLINK(  Idea_URL__c , IMAGE(&quot;/servlet/servlet.ImageServer?id=01530000000PcyN&amp;oid=00D30000000K2Ek&amp;lastMod=1212695693000&quot;,&quot;Image Not Available&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Idea</label>
        <type>Text</type>
    </fields>
    <label>Under Consideration</label>
    <listViews>
        <fullName>AllIdeas</fullName>
        <columns>Original_Idea__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Ideas</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Under Consideration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Under Consideration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>